Add Deprecation annotations, issue #55